# Baby-Wolf

./: AbstractFunction.cpp  AbstractFunction.hpp  Argument.cpp  Argument.hpp  CMakeLists.txt  Constant.cpp  Constant.hpp  Function.cpp  Function.hpp  Grapher.cpp  Grapher.hpp  Parser.cpp  Parser.hpp  README.md  Tests.hpp  Unary.cpp  Unary.hpp  Variadic.cpp  Variadic.hpp  main.cpp
